# togger

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/togger/: __init__.py
